# cuda-kernels

./: .gitignore  CMakeLists.txt
kernels/: CMakeLists.txt
kernels/matmul/: mat_mul_v0_square.cu
kernels/reduce/: CMakeLists.txt  reduce_v0_global_memory.cu
kernels/reduce_add/: CMakeLists.txt  reduce_add_v0_global_memory.cu  reduce_add_v1_shared_memory.cu
kernels/vec_add/: vector_add.cu  vector_add_v1_unified.cu
